More Hengtua Sprites

--- a/localisation/TD_sprite_packs_l_english.yml
+++ b/localisation/TD_sprite_packs_l_english.yml
@@ -125,14 +125,14 @@
  morasari_cirenii_sprite_pack: "Morasari and Cirenii Sprite Pack"
  bunelisuli_sprite_pack: "Bunelisuli Sprite Pack"
  khumaarati_sprite_pack: "Khumaarati Sprite Pack"
- repumoshi_sprite_pack: "Repumoshi Sprite Pack"
+ nitai_group_sprite_pack: "Nitai Group Sprite Pack"
  sasemite_povativi_sprite_pack: "Sasemite and Povativi Sprite Pack"
  onerkan_sprite_pack: "Onerkan Sprite Pack"
  kloerde_sprite_pack: "Kloerde Sprite Pack"
  weesfani_sprite_pack: "Weesfani Sprite Pack"
  achtveldi_sprite_pack: "Achtveldi Sprite Pack"
  north_anavatic_sprite_pack: "North Anavatic Sprite Pack"
- pasmangalan_thboiran_sprite_pack: "Pasmangalan and Thboiran Sprite Pack"
+ pasmangalan_thboiran_cak_kecig_sprite_pack: "Pasmangalan, Thboiran and Cak Kecig Sprite Pack"
  okukaigan_sprite_pack: "Okukaigan Sprite Pack"
  vakepos_sprite_pack: "Vakepos Sprite Pack"
  ta_trai_group_sprite_pack: "Ta Trai Group Sprite Pack"
@@ -145,4 +145,5 @@
  apastra_group_sprite_pack: "Apastra Group Sprite Pack"
  jatihakta_group_sprite_pack: "Jatihatka Group Sprite Pack"
  mazavasi_group_sprite_pack: "Mazavasi Group Sprite Pack"
+ prakaani_group_sprite_pack: "Prakaani Group Sprite Pack"
  
