Sahila Sprite BOMB

--- a/localisation/TD_sprite_packs_l_english.yml
+++ b/localisation/TD_sprite_packs_l_english.yml
@@ -146,4 +146,21 @@
  jatihakta_group_sprite_pack: "Jatihatka Group Sprite Pack"
  mazavasi_group_sprite_pack: "Mazavasi Group Sprite Pack"
  prakaani_group_sprite_pack: "Prakaani Group Sprite Pack"
+ north_sahilan_tech_sprite_pack: "North Sahilan Tech Group Sprite Pack"
+ sanooma_sprite_pack: "Sanooma Sprite Pack"
+ mesutian_group_sprite_pack: "Mesutian Group Sprite Pack"
+ braissli_sprite_pack: "Braissli Sprite Pack"
+ nyanbaric_matteie_group_sprite_pack: "Nyanbaric and Matteie Group Sprite Pack"
+ mpasi_group_sprite_pack: "Mpasi Group Sprite Pack"
+ almurtafan_group_sprite_pack: "Almurtafan Group Sprite Pack"
+ diarenan_group_sprite_pack: "Diarenan Group Sprite Pack"
+ tinan_group_sprite_pack: "Tinan Group Sprite Pack"
+ jambakan_group_sprite_pack: "Jambakan Group Sprite Pack"
+ vanhu_group_sprite_pack: "Vanhu Group Sprite Pack"
+ bongagoyan_group_sprite_pack: "BongagoyanGroup Sprite Pack"
+ inyaji_group_sprite_pack: " Inyaji Group Sprite Pack"
+ itoic_umati_cokar_group_sprite_pack: "Itoic, Umati and Cokar Group Sprite Pack"
+ madunian_group_sprite_pack: "Madunian Group Sprite Pack"
+ buluban_group_sprite_pack: "Buluban Group Sprite Pack"
+ parroutan_group_sprite_pack: "Parroutan Group Sprite Pack"
  
