--- a/localisation/TD_sprite_packs_l_english.yml
+++ b/localisation/TD_sprite_packs_l_english.yml
@@ -61,6 +61,7 @@
  azguran_tayufan_sprite_pack: "Azguran and Tayufan Sprite Pack"
  ramh_sprite_pack: "Ramh Sprite Pack"
  saenayan_sprite_pack: "Saenayan Sprite Pack"
+ mardezard_sprite_pack: "Mardezard Sprite Pack"
  baraqazhi_sprite_pack: "Baraqazhi Sprite Pack"
  hestani_sprite_pack: "Hestan Sprite Pack"
  sunbat_sprite_pack: "Sunbahat Sprite Pack"
