--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -167,3 +167,6 @@
  
  parhali_fortress: "Parhali Fortress"
  parhali_fortress_desc: "Infamous pirate fortress, built by a legendary Apastri sailor and later pirate. The stronghold is known in the region for never falling into enemy's hands."
+
+ habichtberg: "Habichtenberg"
+ habichtberg_desc: "Built during the height of Kuninstoftum of Eniver, the fortress and town that grew around it exemplify the great feats of the fallen state, such as highly defensive architecture and well-maintained roadways."
