--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -921,7 +921,7 @@
  SE_incident.201.b: "We will elevate the southern nobles so that they privileges match the colonial nobility."
  SE_incident.201.c: "A new Kuninstofship will effectively solve this problem"
  SE_incident.201.c_tt0: "Every province with a §YLichterian§! core owned by our subjects will be ceded to Lichter."
- SE_incident.201.c_tt: "Every province owned by emperor or its subjects of either §YToflanter§! or §YNähtrucer§! cultures will be ceded to the new Kuninstofthum."
+ SE_incident.201.c_tt: "Every province owned by emperor or its subjects of either §YToflanter§! or §YNähtrucer§! cultures will be ceded to the new KuninKuninstoftum
  SE_incident.202.t: "[Root.GovernmentName] of [Root.Owner.GetName] and the Empire"
  SE_incident.202.desc: "The wind of change has finally struck [Root.GetName]. With the growing ambitions of glorious [Root.Monarch.GetTitle] [Root.Monarch.GetName] we have reached a point where we are the ones to decide our own fate and not be dependent on other states. This poses important question - should we remain loyal to the emperor or stand on our own in this new and changing world?"
  SE_incident.202.a: "We shall remain faithful to [Emperor.Monarch.GetName]."
