--- a/localisation/TD_01_flavour_snaiwatz_l_english.yml
+++ b/localisation/TD_01_flavour_snaiwatz_l_english.yml
@@ -3,35 +3,35 @@
  snaiwatzer_ideas_bonus: "Snaiwatzer Minor Ambition"
  snaiwatzer_ideas_start: "Snaiwatzer Minor Traditions"
  snaiwatzer_legacy_of_adrianburg_privilege: "Legacy of Adrianburg Privilege"
- snaiwatzer_legacy_of_adrianburg_privilege_desc: "Adrianburg Privilege was a privilege that exempted Snaiwatzer nobility from most taxes that was enacted on year 986. It has resulted in increased autonomy of Snaiwatz, back then known as Kuninstoftum of Eniver, in regards to rest of the Saelian Empire, and increased stability in the area was achieved thanks to this privilege."
- snaiwatzer_old_eniver_roads: "Old Eniver Roads"
- snaiwatzer_old_eniver_roads_desc: "Kuninstoftum of Eniver was a political entity that spanned most of modern Snaiwatz back in IXth and Xth century, and most roads connecting north and south we are using today are from that period. They are to this day used as very important land trade routes and for military purposes."
- snaiwatzer_organization_of_kriegskapitanate: "Organization of Kriegskapitänate"
- snaiwatzer_organization_of_kriegskapitanate_desc: "Most mercenaries in the saelian empire are either royal armies rented out by the Nahtrucer markgrafs or private armies of Snaiwatz. They were widely used since the 13th century as an alternative way of income for rural pastoralists of Cacumuds. They were hired not only by the small states in their regional conflicts, such as Geoberic princes and Salish princes, but also by bigger countries, such as Bohemia, Rubmeo and even Kriegersteiner emperors. They were known in these times for their discipline and effectiveness, often being smaller in numbers, but using more elaborate tactics and advanced technology, e. g. adopting gunpowder arquebuses earlier than any other part of the empire. Most of these mercenaries aren’t organized as free companies or independent armies, but are rather soldiers rented out by the local states. They are led by the Kriegskapitäns, meaning war captains, who is a representative of the duke or count in military affairs outside of the borders of the state. In the early times they were simply relatives of the ruler, but with time they shifted into a more meritocratic position."
+ snaiwatzer_legacy_of_adrianburg_privilege_desc: "To convince the Eniverians to properly join the empire, a privilege was proposed to them in 986, exempting Snaiwatzer nobility from most imperial taxes. It was the final blow to the Kuninstoftum of Eniver, integrating its part into the empire. Since then the privilege remained, greatly helping the struggling mountainous states."
+ snaiwatzer_old_eniver_roads: "Cacumuds Roadways"
+ snaiwatzer_old_eniver_roads_desc: "Most roads currently maintained in Snaiwatz were built during the times of Kuninstoftum of Eniver, a political entity that spanned most of modern Snaiwatz the second half of the first millenium. Most of those roadways were built to connect the Empire with Snaiwatz and Camaria in the shortest way possible. They are to this day used for economic and military purposes."
+ snaiwatzer_organization_of_kriegskapitanate: "Royal Elenders"
+ snaiwatzer_organization_of_kriegskapitanate_desc: "Snaiwatzer mercenaries were widely used since the 13th century as an alternative way of income for rural pastoralists of Cacumuds. They were known in these times for their discipline and effectiveness, often being smaller in numbers, but using more elaborate tactics and advanced technology, such as adopting gunpowder arquebuses earlier than any other part of the empire. Those mercenaries are often led by a lowborn Kriegskapitän, who is under the command of the prince."
  snaiwatzer_mountain_defenses: "Natural Defenses"
- snaiwatzer_mountain_defenses_desc: "A bad leader couldn't defend a hill, but a fool couldn't defend a mountain with modern fortifications and well-trained garrison. Many armies inexperienced in fighting in mountains failed to conquer us and this is how we will survive."
- snaiwatzer_zbojaner_roots: "Zbojaner Roots"
- snaiwatzer_zbojaner_roots_desc: "These territories were originally settled by Zbojaner people and many of our own still have Bohemian ancestors. Their folklore and religion is still seen in architecture and art and sometimes even claiming Zbojaner ancestry is seen as prestigious."
+ snaiwatzer_mountain_defenses_desc: "It is said that even a fool could defend a Snaiwatzer fort sieged even by the greatest leaders. Whether it is thanks to the harsh climate or simple inexperience in mountainous fighting, many failed to conquer us and this is how we will survive."
+ snaiwatzer_zbojaner_roots: "Eniverian Roots"
+ snaiwatzer_zbojaner_roots_desc: "These territories were originally united by the Zbojano-Silvestrine kingdom of Eniver, client state of the Saelian Empire which existed between 640 and 979. Many still take pride in their unique way heritage."
  snaiwatzer_legacy_of_mercenary_wars: "Legacy of Mercenary Wars"
- snaiwatzer_legacy_of_mercenary_wars_desc: "With how all five wars of the Mercenary wars ravaged the empire, and with how main stage of said conflicts was Snaiwatz itself, we have learned a learned a lot about military warfare from it."
+ snaiwatzer_legacy_of_mercenary_wars_desc: "With how all five wars of the Mercenary wars ravaged the empire, and with how main stage of said conflicts was Snaiwatz itself, we have learned a lot about military warfare from it, such as never to attack overwhelmingly stronger enemy in mountains and never take refugee in an area with a high landslide risk during January."
  snaiwatzer_expansion_of_mountainous_settlements: "Expansion of Mountainous Settlements"
  snaiwatzer_expansion_of_mountainous_settlements_desc: "Harsh winters and wild mountains taught the Snaiwatzer people how to not only effectively build good shelters, but also how to conserve resources in case of an emergency."
  
  snaiwatzer_nation_ideas: "Snaiwatzer Ideas"
  snaiwatzer_nation_ideas_start: "Snaiwatzer Traditions"
  snaiwatzer_nation_ideas_bonus: "Snaiwatzer Ambition"
- snaiwatzer_metal_trade_hegemony: "Metal Trade Hegemony"
- snaiwatzer_metal_trade_hegemony_desc: "Western Cacumuds are rich with iron, coal, silver and even gold. With reunification of old Kingdom of Eniver now known as Snaiwatz, we once again set our sight at dominating mining and trade in the entire Saelian Empire."
- snaiwatzer_peasants_in_kriegskapitanate: "Peasants in Kriegskapitänate"
- snaiwatzer_peasants_in_kriegskapitanate_desc: "With most of our mercenary armies that we rent out being composed of pastoral Cacumudian peasants, we decided to expand it to all peasants of the reunited Snaiwatz."
+ snaiwatzer_metal_trade_hegemony: "Saelian Foundries"
+ snaiwatzer_metal_trade_hegemony_desc: "Western Cacumuds are rich with iron, coal, silver and even gold. With the unification of Snaiwatz, we once again set our sight at dominating mining and trade in the entire Saelian Empire."
+ snaiwatzer_peasants_in_kriegskapitanate: "Elender Recompensation"
+ snaiwatzer_peasants_in_kriegskapitanate_desc: "Vast majority of soldiers of our army are peasants of lesser fortune, those who couldn't maintain their pastoral lifestyle or were forcibly removed from it. To appease them and repopulate the countryside, they will be granted land for their service."
  snaiwatzer_high_altitude_defenses: "High Altitude Defenses"
- snaiwatzer_high_altitude_defenses_desc: "Living across the continental divide, with our influences spreading from peaks to piedmont, we have naturally developed our defense fortifications accordingly with the terrain, making them one of the best mountain fortresses in the entire Mysentria."
+ snaiwatzer_high_altitude_defenses_desc: "Living across the continental divide, with our influences spreading from peaks of Mount Epido to valleys of Magreina, we have naturally developed our defense fortifications accordingly with the terrain, making them one of the best mountain fortresses in the entire Mysentria."
  snaiwatzer_mountain_folk: "Mountain Folk"
  snaiwatzer_mountain_folk_desc: "Long time have passed since our Zbojaner ancestors came here, and in effect, we aren't truly only Zbojaner, or Silvestrine, we are a mix of both, and that what makes us, Snaiwatzer people, unique, and our nobility prides itself in it."
  snaiwatzer_new_imperial_mint: "New Imperial Mint"
  snaiwatzer_new_imperial_mint_desc: "When the Imperial Mint of Limburg depleted, the emperor established a new mint in our lands, in the very heart of it, between the Cacumudian mountain range, in Grobhalde, and after years of running it, we have learned many lessons on managing a mint."
  snaiwatzer_improved_gunmaking: "Improved Gunmaking"
- snaiwatzer_improved_gunmaking_desc: "With Mercenary wars behind us and Elender Confederation defeated at last, we take lessons from this brutal conflict so the next time our Kriegskapitänate revolts, we are better prepared for waging modern warfare."
+ snaiwatzer_improved_gunmaking_desc: "With Mercenary wars behind us and Elender Confederation defeated at last, we take lessons from this brutal conflict so the next time our Kriegskapitäns revolts, we are better prepared for waging modern warfare."
  snaiwatzer_expansion_of_adrianburg_privileges: "Expansion of Adrianburg Privilege"
  snaiwatzer_expansion_of_adrianburg_privileges_desc: "Adrianburg Privilege marks the time period Eniver ceased to be and disunited Snaiwatz came to be, but now, we have managed to secure expansion of said Privileges, and this marks the point in time that Snaiwatz became true heir to Kuninstoftum of Eniver."
  
