--- a/localisation/TD_01_flavour_snaiwatz_l_english.yml
+++ b/localisation/TD_01_flavour_snaiwatz_l_english.yml
@@ -23,7 +23,7 @@
  snaiwatzer_metal_trade_hegemony: "Saelian Foundries"
  snaiwatzer_metal_trade_hegemony_desc: "Western Cacumuds are rich with iron, coal, silver and even gold. With the unification of Snaiwatz, we once again set our sight at dominating mining and trade in the entire Saelian Empire."
  snaiwatzer_peasants_in_kriegskapitanate: "Elender Recompensation"
- snaiwatzer_peasants_in_kriegskapitanate_desc: "Vast majority of soldiers of our army are peasants of lesser fortune, those who couldn't maintain their pastoral lifestyle or were forcibly removed from it. To appease them and repopulate the countryside, they will be granted land for their service."
+ snaiwatzer_peasants_in_kriegskapitanate_desc: "Vast majority of soldiers of our army are peasants and commoners of lesser fortune, those who couldn't maintain their pastoral lifestyle or were forcibly removed from it. To appease them and repopulate the countryside, they will be granted land for their service."
  snaiwatzer_high_altitude_defenses: "High Altitude Defenses"
  snaiwatzer_high_altitude_defenses_desc: "Living across the continental divide, with our influences spreading from peaks of Mount Epido to valleys of Magreina, we have naturally developed our defense fortifications accordingly with the terrain, making them one of the best mountain fortresses in the entire Mysentria."
  snaiwatzer_mountain_folk: "Mountain Folk"
