--- a/localisation/TD_estate_names_l_english.yml
+++ b/localisation/TD_estate_names_l_english.yml
@@ -31,5 +31,6 @@
  estate_konmaristers: "Konmaristers"
  estate_amagari: "Amagari"
  #peasants
+ estate_friburs: "Friburs"
  estate_commoners: "Commoners"
  estate_pastorialists: "Pastorialists"
