lunseka + ngamba prov names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -75,7 +75,7 @@
  PROV74: "Ridyahan"
  PROV75: "Rizqal"
  PROV76: "Qafqumir"
- PROV77: "77"
+ PROV77: "Lufunda"
  PROV78: "Marjanid"
  PROV79: "Arrecan"
  PROV80: "Desanaux"
@@ -2079,7 +2079,7 @@
  PROV2078: "Northern Escravian Sea"
  PROV2079: "Gatkarha"
  PROV2080: "Kustira"
- PROV2081: "2081"
+ PROV2081: "Ganbahan Coast"
  PROV2082: "Jharlka"
  PROV2083: "Chhabang"
  PROV2084: "Untkana"
@@ -2104,7 +2104,7 @@
  PROV2103: "Kigha"
  PROV2104: "Portma"
  PROV2105: "Kolanda"
- PROV2106: "2106"
+ PROV2106: "Niakita Cape"
  PROV2107: "Düÿlumak"
  PROV2108: "Dogamar"
  PROV2109: "Kagantarluk"
@@ -2187,7 +2187,7 @@
  PROV2186: "Yüqmay"
  PROV2187: "Mikra"
  PROV2188: "Gugbulsh"
- PROV2189: "2189"
+ PROV2189: "Badakan Coast"
  PROV2190: "Tengikhar"
  PROV2191: "Jigsür"
  PROV2192: "Khavrytol"
@@ -3517,7 +3517,7 @@
  PROV3516: "Pagakanra"
  PROV3517: "Gatauna"
  PROV3518: "3518"
- PROV3519: "3519"
+ PROV3519: "Dhaman Coast"
  PROV3520: "Kathsrpa"
  PROV3521: "Daskivistar"
  PROV3522: "Tumma"
@@ -3526,8 +3526,8 @@
  PROV3525: "Bgosan"
  PROV3526: "Atuma"
  PROV3527: "Rajaajärvi"
- PROV3528: "3528"
- PROV3529: "3529"
+ PROV3528: "Mejietatean Coast"
+ PROV3529: "Vaanosan Coast"
  PROV3530: "3530"
  PROV3531: "Sitrama"
  PROV3532: "Sitrama"
@@ -3615,16 +3615,16 @@
  PROV3614: "Byumgbag"
  PROV3615: "3615"
  PROV3616: "Mamugchis"
- PROV3617: "3617"
+ PROV3617: "Ubigan Bay"
  PROV3618: "Rotogpaing"
  PROV3619: "3619"
  PROV3620: "Ragnyudzim"
  PROV3621: "Dalttha"
  PROV3622: "Cithanu"
- PROV3623: "3623"
+ PROV3623: "Gunu Bay"
  PROV3624: "Bitabhava"
  PROV3625: "Guzhampag"
- PROV3626: "3626"
+ PROV3626: "Lunsekan Bay"
  PROV3627: "Puhamtshug"
  PROV3628: "Rungam"
  PROV3629: "Becadag"
@@ -4439,7 +4439,7 @@
  PROV4438: "Mbanpmo" #mbani city
  PROV4439: "Matpus"
  PROV4440: "Nagwke" #elephant forest
- PROV4441: "4441"
+ PROV4441: "Badaka"
  PROV4442: "Ouaman" #two rivers
  PROV4443: "Sartikoui" #iron cave
  PROV4444: "Korospar" #shepard's field
@@ -4857,9 +4857,9 @@
  PROV4856: "4856"
  PROV4857: "4857"
  PROV4858: "4858"
- PROV4859: "4859"
- PROV4860: "4860"
- PROV4861: "4861"
+ PROV4859: "Mavunyi"
+ PROV4860: "Nava"
+ PROV4861: "Lirakata"
  PROV4862: "4862"
  PROV4863: "4863"
  PROV4864: "4864"
@@ -5070,8 +5070,8 @@
  PROV5069: "5069"
  PROV5070: "5070"
  PROV5071: "5071"
- PROV5072: "5072"
- PROV5073: "5073"
+ PROV5072: "Zetezi"
+ PROV5073: "Zetezi"
  PROV5074: "5074"
  PROV5075: "5075"
  PROV5076: "5076"
@@ -5086,71 +5086,71 @@
  PROV5085: "5085"
  PROV5086: "5086"
  PROV5087: "5087"
- PROV5088: "5088"
- PROV5089: "5089"
+ PROV5088: "Kito"
+ PROV5089: "Sununa"
  PROV5090: "5090"
  PROV5091: "5091"
  PROV5092: "5092"
- PROV5093: "5093"
- PROV5094: "5094"
- PROV5095: "5095"
- PROV5096: "5096"
- PROV5097: "5097"
- PROV5098: "5098"
- PROV5099: "5099"
- PROV5100: "5100"
- PROV5101: "5101"
- PROV5102: "5102"
- PROV5103: "5103"
- PROV5104: "5104"
- PROV5105: "5105"
- PROV5106: "5106"
- PROV5107: "5107"
- PROV5108: "5108"
- PROV5109: "5109"
- PROV5110: "5110"
- PROV5111: "5111"
- PROV5112: "5112"
- PROV5113: "5113"
- PROV5114: "5114"
- PROV5115: "5115"
- PROV5116: "5116"
- PROV5117: "5117"
- PROV5118: "5118"
- PROV5119: "5119"
- PROV5120: "5120"
- PROV5121: "5121"
- PROV5122: "5122"
- PROV5123: "5123"
- PROV5124: "5124"
- PROV5125: "5125"
- PROV5126: "5126"
- PROV5127: "5127"
- PROV5128: "5128"
- PROV5129: "5129"
- PROV5130: "5130"
- PROV5131: "5131"
- PROV5132: "5132"
- PROV5133: "5133"
- PROV5134: "5134"
- PROV5135: "5135"
- PROV5136: "5136"
- PROV5137: "5137"
- PROV5138: "5138"
+ PROV5093: "Vola"
+ PROV5094: "Keki"
+ PROV5095: "Lunzinda"
+ PROV5096: "Kuma"
+ PROV5097: "Biondo"
+ PROV5098: "Nkende"
+ PROV5099: "Tutika"
+ PROV5100: "Nlondi"
+ PROV5101: "Iya"
+ PROV5102: "Inada"
+ PROV5103: "Babu"
+ PROV5104: "Etonda"
+ PROV5105: "Afi"
+ PROV5106: "Udrin"
+ PROV5107: "Gundu"
+ PROV5108: "Ayiuma"
+ PROV5109: "Wadi"
+ PROV5110: "Idike"
+ PROV5111: "Oloso"
+ PROV5112: "Fura"
+ PROV5113: "Okom"
+ PROV5114: "Nsuki"
+ PROV5115: "Nogala"
+ PROV5116: "Mfeka"
+ PROV5117: "Okule"
+ PROV5118: "Ntangu"
+ PROV5119: "Nga"
+ PROV5120: "Bapo"
+ PROV5121: "Iwele"
+ PROV5122: "Tutomo"
+ PROV5123: "Wanat"
+ PROV5124: "Ganbaha"
+ PROV5125: "Gunu"
+ PROV5126: "Kene"
+ PROV5127: "Tohowaha"
+ PROV5128: "Nka"
+ PROV5129: "Pwameso"
+ PROV5130: "Semona"
+ PROV5131: "Nkumbu"
+ PROV5132: "Kuma"
+ PROV5133: "Baya"
+ PROV5134: "Ebida"
+ PROV5135: "Lutuma"
+ PROV5136: "Nsila"
+ PROV5137: "Landala"
+ PROV5138: "Tampe"
  PROV5139: "5139"
- PROV5140: "5140"
- PROV5141: "5141"
- PROV5142: "5142"
- PROV5143: "5143"
- PROV5144: "5144"
- PROV5145: "5145"
- PROV5146: "5146"
- PROV5147: "5147"
- PROV5148: "5148"
- PROV5149: "5149"
- PROV5150: "5150"
- PROV5151: "5151"
- PROV5152: "5152"
+ PROV5140: "Mpungi"
+ PROV5141: "Nianikemena"
+ PROV5142: "Kese"
+ PROV5143: "Dikala"
+ PROV5144: "Kindam"
+ PROV5145: "Tota"
+ PROV5146: "Answaga"
+ PROV5147: "Lala"
+ PROV5148: "Kuayaz"
+ PROV5149: "Yeve"
+ PROV5150: "Yangum"
+ PROV5151: "Nesa"
+ PROV5152: "Kinziza"
  PROV5153: "Dutissim"
  PROV5154: "Dutissim"
 
