--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3608,12 +3608,12 @@
  PROV3607: "3607"
  PROV3608: "3608"
  PROV3609: "Tokara"
- PROV3610: "3610"
+ PROV3610: "Eastern Ami Sea"
  PROV3611: "Kitara"
  PROV3612: "Bhamata"
  PROV3613: "Badbag"
  PROV3614: "Byumgbag"
- PROV3615: "3615"
+ PROV3615: "Western Ami Sea"
  PROV3616: "Mamugchis"
  PROV3617: "Ubigan Bay"
  PROV3618: "Rotogpaing"
@@ -3628,7 +3628,7 @@
  PROV3627: "Puhamtshug"
  PROV3628: "Rungam"
  PROV3629: "Becadag"
- PROV3630: "3630"
+ PROV3630: "Yakukatan Bay"
  PROV3631: "Sikuugs"
  PROV3632: "Madozesam"
  PROV3633: "Basutomd"
@@ -3640,7 +3640,7 @@
  PROV3639: "Jabashad"
  PROV3640: "Manogbag"
  PROV3641: "Busamgomtan"
- PROV3642: "3642"
+ PROV3642: "Kugizan Coast"
  PROV3643: "Bisinpumg"
  PROV3644: "Yondungpa"
  PROV3645: "Buskorga"
@@ -3897,7 +3897,7 @@
  PROV3896: "Thauran"
  PROV3897: "Naangar"
  PROV3898: "Tsuksui"
- PROV3899: "3899"
+ PROV3899: "Inyato"
  PROV3900: "Cinmpai"
  PROV3901: "Nankeo"
  PROV3902: "Boihin"
@@ -3916,7 +3916,7 @@
  PROV3915: "Huagan"
  PROV3916: "Khaamgan"
  PROV3917: "Sungburi"
- PROV3918: "3918"
+ PROV3918: "Inyanini"
  PROV3919: "Plastsev"
  PROV3920: "Daenbung"
  PROV3921: "Phchidan"
@@ -4990,7 +4990,7 @@
  PROV4989: "4989"
  PROV4990: "4990"
  PROV4991: "4991"
- PROV4992: "4992"
+ PROV4992: "Ongala"
  PROV4993: "4993"
  PROV4994: "4994"
  PROV4995: "4995"
@@ -5032,13 +5032,13 @@
  PROV5031: "5031"
  PROV5032: "5032"
  PROV5033: "5033"
- PROV5034: "5034"
- PROV5035: "5035"
- PROV5036: "5036"
+ PROV5034: "Liungu"
+ PROV5035: "Epi"
+ PROV5036: "Oneni"
  PROV5037: "5037"
- PROV5038: "5038"
- PROV5039: "5039"
- PROV5040: "5040"
+ PROV5038: "Umosi"
+ PROV5039: "Utuli"
+ PROV5040: "Tuvolo"
  PROV5041: "5041"
  PROV5042: "5042"
  PROV5043: "5043"
@@ -5052,21 +5052,21 @@
  PROV5051: "5051"
  PROV5052: "5052"
  PROV5053: "5053"
- PROV5054: "5054"
- PROV5055: "5055"
- PROV5056: "5056"
- PROV5057: "5057"
- PROV5058: "5058"
- PROV5059: "5059"
- PROV5060: "5060"
- PROV5061: "5061"
- PROV5062: "5062"
- PROV5063: "5063"
- PROV5064: "5064"
- PROV5065: "5065"
- PROV5066: "5066"
- PROV5067: "5067"
- PROV5068: "5068"
+ PROV5054: "Dabuja"
+ PROV5055: "Umuji"
+ PROV5056: "Kwigira"
+ PROV5057: "Hinguka"
+ PROV5058: "Gese"
+ PROV5059: "Kurarama"
+ PROV5060: "Kurunda"
+ PROV5061: "Ubusa"
+ PROV5062: "Gurube"
+ PROV5063: "Kweugira"
+ PROV5064: "Izika"
+ PROV5065: "Gukene"
+ PROV5066: "Gukara"
+ PROV5067: "Tanu"
+ PROV5068: "Kandara"
  PROV5069: "5069"
  PROV5070: "5070"
  PROV5071: "5071"
@@ -5080,12 +5080,12 @@
  PROV5079: "5079"
  PROV5080: "5080"
  PROV5081: "5081"
- PROV5082: "5082"
- PROV5083: "5083"
+ PROV5082: "Kwauru"
+ PROV5083: "Gura"
  PROV5084: "5084"
- PROV5085: "5085"
- PROV5086: "5086"
- PROV5087: "5087"
+ PROV5085: "Utuza"
+ PROV5086: "Buho"
+ PROV5087: "Igite"
  PROV5088: "Kito"
  PROV5089: "Sununa"
  PROV5090: "5090"
@@ -5137,7 +5137,7 @@
  PROV5136: "Nsila"
  PROV5137: "Landala"
  PROV5138: "Tampe"
- PROV5139: "5139"
+ PROV5139: "Onjila"
  PROV5140: "Mpungi"
  PROV5141: "Nianikemena"
  PROV5142: "Kese"
