--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -993,11 +993,11 @@
  PROV992: "Keihalaskan Bay"
  PROV993: "Arwan" #cow
  PROV994: "Rabia" #hill
- PROV995: "995"
+ PROV995: "Western Merqenta Sea"
  PROV996: "Fawud"
  PROV997: "Begiahafa"
  PROV998: "Werinu"
- PROV999: "999"
+ PROV999: "Eastern Sunken Rift"
  PROV1000: "Ehagede" #foreigner
  PROV1001: "Kihaleb" #Most Magnanimous
  PROV1002: "Jawasen" #Middle
@@ -1715,7 +1715,7 @@
  PROV1714: "Bezaq"
  PROV1715: "Abujman"
  PROV1716: "Akhakal" 
- PROV1717: "1717"
+ PROV1717: "Hajiza"
  PROV1718: "Okeirina"
  PROV1719: "Coast of Nasala"
  PROV1720: "Karisavela"
@@ -2678,9 +2678,9 @@
  PROV2677: "Kisepuatai"
  PROV2678: "Maxpuari"
  PROV2679: "Yottohoyri"
- PROV2680: "2680"
+ PROV2680: "Kahuyan Coast"
  PROV2681: "Central Tsinhoi Gulf"
- PROV2682: "2682"
+ PROV2682: "Bobai Coast"
  PROV2683: "Horcktehoyri"
  PROV2684: "Moltepahni"
  PROV2685: "Kwokuen Sea"
@@ -2690,19 +2690,19 @@
  PROV2689: "Hanyar"
  PROV2690: "Sryhla"
  PROV2691: "Lakmag"
- PROV2692: "2692"
+ PROV2692: "Aapituan Sea"
  PROV2693: "Gavalur"
  PROV2694: "Norkhaga"
  PROV2695: "Büüloporpost"
  PROV2696: "Zujar"
- PROV2697: "2697"
+ PROV2697: "Pawahjoan Sea"
  PROV2698: "Paragil"
  PROV2699: "Tenlas"
  PROV2700: "Sadava"
  PROV2701: "Ezakola"
- PROV2702: "2702"
- PROV2703: "2703"
- PROV2704: "2704"
+ PROV2702: "Northern Kari Sea"
+ PROV2703: "Pankati Sea"
+ PROV2704: "Northern Bayarari Sea"
  PROV2705: "Khuruulvar"
  PROV2706: "Gemek"
  PROV2707: "Saen-Sakhan Coast"
@@ -2715,37 +2715,37 @@
  PROV2714: "Adrazma"
  PROV2715: "Menta"
  PROV2716: "Puntien Straits"
- PROV2717: "2717"
+ PROV2717: "Mihati Bay"
  PROV2718: "Sagz"
  PROV2719: "Sarikul"
- PROV2720: "2720"
+ PROV2720: "Kiteyenefan Bay"
  PROV2721: "Mukshaya"
  PROV2722: "Spargit"
  PROV2723: "Ata"
  PROV2724: "Vayrivar"
  PROV2725: "Hagstur"
- PROV2726: "2726"
+ PROV2726: "Alimeali Bay"
  PROV2727: "Hovkblur"
  PROV2728: "Jamsa"
  PROV2729: "Makravan"
  PROV2730: "Kapukor"
- PROV2731: "2731"
- PROV2732: "2732"
+ PROV2731: "Kursanan Coast"
+ PROV2732: "Belaniti Coast"
  PROV2733: "Basakumbe"
  PROV2734: "Demidak"
  PROV2735: "Yyrtylit"
  PROV2736: "Ammag"
  PROV2737: "Hulukinaku"
- PROV2738: "2738"
- PROV2739: "2739"
- PROV2740: "2740"
+ PROV2738: "Ramumoni Sea"
+ PROV2739: "Southern Kari Sea"
+ PROV2740: "Central Laut-Dalam"
  PROV2741: "Puricaichi"
  PROV2742: "Horcktecaichi"
  PROV2743: "Uninaku"
  PROV2744: "Enuahinapu"
  PROV2745: "Tipakehiti"
  PROV2746: "Taciwitu"
- PROV2747: "2747"
+ PROV2747: "Lesblepi Coast"
  PROV2748: "2748"
  PROV2749: "Eyisaw"
  PROV2750: "Hekwayaar"
@@ -2783,12 +2783,12 @@
  PROV2782: "Saalasstace"
  PROV2783: "Otomekai Sea"
  PROV2784: "Scixstace"
- PROV2785: "Gulf of Kyosan"
+ PROV2785: "Southern Bayarari Sea"
  PROV2786: "Cetxwistaces"
- PROV2787: "Southern Nankai Sea"
+ PROV2787: "2787"
  PROV2788: "Akscismex"
  PROV2789: "Shishen Coast"
- PROV2790: "2790"
+ PROV2790: "Pitupitan Gulf"
  PROV2791: "Yucxstaces"
  PROV2792: "Tarwemeer"
  PROV2793: "Azumagan Coast"
@@ -2797,7 +2797,7 @@
  PROV2796: "Kempiitsuns"
  PROV2797: "Cheukan Coast"
  PROV2798: "Uikwehewaka"
- PROV2799: "2799"
+ PROV2799: "Oyaman Coast"
  PROV2800: "Cururuacik"
  PROV2801: "Kitasarian Sea"
  PROV2802: "Kemairkalliwa"
@@ -2996,7 +2996,7 @@
  PROV2995: "Panmapak"
  PROV2996: "Maalgutkig"
  PROV2997: "Igutchak"
- PROV2998: "2998"
+ PROV2998: "Southern Tiefblau Sea"
  PROV2999: "Aasrivak"
  PROV3000: "Sivullik"
  PROV3001: "Sivisurukpags"
@@ -3185,7 +3185,7 @@
  PROV3184: "Dahasam"
  PROV3185: "Ulaan Talbai"
  PROV3186: "Tövdov"
- PROV3187: "3187"
+ PROV3187: "Tuluorean Coast"
  PROV3188: "Abalok Strait"
  PROV3189: "Qaramkhnur"
  PROV3190: "Ötgkhön"
@@ -3644,7 +3644,7 @@
  PROV3643: "Bisinpumg"
  PROV3644: "Yondungpa"
  PROV3645: "Buskorga"
- PROV3646: "3646"
+ PROV3646: "Northern Maro Sea"
  PROV3647: "Machodga"
  PROV3648: "Sepyorags"
  PROV3649: "3649"
@@ -3664,9 +3664,9 @@
  PROV3663: "Goridhota"
  PROV3664: "Eastern Inquieto Sea"
  PROV3665: "Durghlatama"
- PROV3666: "3666"
+ PROV3666: "Southern Maro Sea"
  PROV3667: "Southern Sunken Rift"
- PROV3668: "3668"
+ PROV3668: "Western Maro Sea"
  PROV3669: "Central Sunken Rift"
  PROV3670: "Ksamalata"
  PROV3671: "Daboama"
@@ -3681,8 +3681,8 @@
  PROV3680: "Chkahasa"
  PROV3681: "Chagamala"
  PROV3682: "Tagharuma"
- PROV3683: "3683"
- PROV3684: "3684"
+ PROV3683: "Eastern Maro Sea"
+ PROV3684: "Eastern Merqenta Sea"
  PROV3685: "3685"
  PROV3686: "Vyjertya"
  PROV3687: "Balcgyat"
@@ -4555,7 +4555,7 @@
  PROV4554: "Barnahra" #land across the river
  PROV4555: "Almurtaf"
  PROV4556: "Dinigiza"
- PROV4557: "4557"
+ PROV4557: "Menhe"
  PROV4558: "Megebe"
  PROV4559: "Almurtaf"
  PROV4560: "Wata" #rise
@@ -4601,9 +4601,9 @@
  PROV4600: "4600"
  PROV4601: "4601"
  PROV4602: "4602"
- PROV4603: "4603"
+ PROV4603: "Gueko"
  PROV4604: "Jalaba" #river beginning
- PROV4605: "4605"
+ PROV4605: "Kama"
  PROV4606: "Regara" #well village
  PROV4607: "Sikwir" #sugar
  PROV4608: "Agab" #Mountain pass
@@ -4829,38 +4829,38 @@
  PROV4828: "4828"
  PROV4829: "4829"
  PROV4830: "4830"
- PROV4831: "4831"
- PROV4832: "4832"
- PROV4833: "4833"
- PROV4834: "4834"
- PROV4835: "4835"
- PROV4836: "4836"
- PROV4837: "4837"
- PROV4838: "4838"
+ PROV4831: "Karuli"
+ PROV4832: "Luogai"
+ PROV4833: "Yoek"
+ PROV4834: "Jondiit"
+ PROV4835: "Kier"
+ PROV4836: "Diendo"
+ PROV4837: "Nalel"
+ PROV4838: "Luonecie"
  PROV4839: "4839"
  PROV4840: "4840"
  PROV4841: "4841"
  PROV4842: "4842"
  PROV4843: "4843"
  PROV4844: "4844"
- PROV4845: "4845"
- PROV4846: "4846"
+ PROV4845: "Coodien"
+ PROV4846: "Agook"
  PROV4847: "4847"
- PROV4848: "4848"
- PROV4849: "4849"
- PROV4850: "4850"
- PROV4851: "4851"
- PROV4852: "4852"
- PROV4853: "4853"
- PROV4854: "4854"
- PROV4855: "4855"
- PROV4856: "4856"
- PROV4857: "4857"
- PROV4858: "4858"
+ PROV4848: "Akeu"
+ PROV4849: "Joege"
+ PROV4850: "Riakiga"
+ PROV4851: "Pictu"
+ PROV4852: "Nyuet"
+ PROV4853: "Lokkuol"
+ PROV4854: "Muti"
+ PROV4855: "Mandar"
+ PROV4856: "Nyian"
+ PROV4857: "Kendingiwu"
+ PROV4858: "Gaalga"
  PROV4859: "Mavunyi"
  PROV4860: "Nava"
  PROV4861: "Lirakata"
- PROV4862: "4862"
+ PROV4862: "Athee"
  PROV4863: "4863"
  PROV4864: "4864"
  PROV4865: "4865"
@@ -5082,7 +5082,7 @@
  PROV5081: "5081"
  PROV5082: "Kwauru"
  PROV5083: "Gura"
- PROV5084: "5084"
+ PROV5084: "Akarande"
  PROV5085: "Utuza"
  PROV5086: "Buho"
  PROV5087: "Igite"
