--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -102,7 +102,7 @@
  PROV101: "Nasala"
  PROV102: "Yala"
  PROV103: "Komara"
- PROV104: "104"
+ PROV104: "Jasa"
  PROV105: "Melahan"
  PROV106: "Datayssa"
  PROV107: "Arnar"
@@ -3617,7 +3617,7 @@
  PROV3616: "Mamugchis"
  PROV3617: "Ubigan Bay"
  PROV3618: "Rotogpaing"
- PROV3619: "3619"
+ PROV3619: "South Amhelian Coast"
  PROV3620: "Ragnyudzim"
  PROV3621: "Dalttha"
  PROV3622: "Cithanu"
@@ -3647,8 +3647,8 @@
  PROV3646: "Northern Maro Sea"
  PROV3647: "Machodga"
  PROV3648: "Sepyorags"
- PROV3649: "3649"
- PROV3650: "3650"
+ PROV3649: "Western Amhelian Coast"
+ PROV3650: "Southernwestern Amhelian Coast"
  PROV3651: "Nagestash"
  PROV3652: "Khrota"
  PROV3653: "Pravataka"
@@ -5005,7 +5005,7 @@
  PROV5004: "5004"
  PROV5005: "5005"
  PROV5006: "5006"
- PROV5007: "5007"
+ PROV5007: "Amhelia"
  PROV5008: "5008"
  PROV5009: "5009"
  PROV5010: "5010"
