silvestrine reforms tier 1

--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -239,3 +239,9 @@
  desc_woods_forest_buff_mod: "This province benefits from increased effectiveness of further development."
  mechanic_reduced_woods_forest_penalties_yes: "Reduced development cost penalties in §YWoods§! and §YForest§! terrains."
  woods_forest_buff_tt: "Development Cost in §YForest§! and §YWoods§! terrains: §G-10.0%§!"
+
+ landwaldanate_reform: "Landwaldanate"
+ landwaldanate_reform_desc: "Many rulers in the Sigilian Empire are stewards of emperor's land, a system established after many Kuninstoftums were integrated into the empire. While de iure the power of Landwalder comes only from approval of the emperor, in reality it is local estates that pull all the strings."
+
+ toflanter_monarchy_reform: "Magreiner Monarchy"
+ toflanter_monarchy_reform_desc: "After Imperial Settler Edict of 1089 many nobles and commoners ventured north to colonize (or conquer) lands north of Magkirche."
