--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -245,3 +245,6 @@
 
  toflanter_monarchy_reform: "Magreiner Monarchy"
  toflanter_monarchy_reform_desc: "After Imperial Settler Edict of 1089 many nobles and commoners ventured north to colonize (or conquer) lands north of Magkirche."
+
+ geoberic_monarchy: "Geoberic Monarchy"
+ geoberic_monarchy_desc: "A government where a tight-knit royal elite secures the interest of the family in and outside of the realm."
