Snaiwatzer Wars Setup Part I (Heavy WIP)

--- a/localisation/TD_01_flavour_snaiwatz_l_english.yml
+++ b/localisation/TD_01_flavour_snaiwatz_l_english.yml
@@ -38,3 +38,41 @@
  snaiwatz.1.t: "The Development of Coal Mining"
  snaiwatz.1.desc: "Brothers of the mine rejoice!\nSwing, swing, swing with me!\nRaise your pick and raise your voice!\nSing, sing, sing with me!\nDown and down into the deep\nWho knows what we'll find beneath?\nDiamonds, rubies, gold, and more\nHidden in the mountains store\nBorn underground\nSuckled from a teat of stone\nRaised in the dark\nThe safety of our mountain home\nSkin made of iron\nSteel in our bones\nTo dig and dig makes us free\nCome on, brothers, sing with me!\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, diggy diggy coal\nI am a snaiwatzer, and I'm digging a coal\\nThe sunlight will not reach this low\nDeep, deep in the mine\nNever seen the blue moonglow\nSnaiwatzer won't fly so high\nFill a glass and down some mead\nStuff your bellies at the feast!\nStumble home and fall asleep\nDreaming in our mountain keep\nBorn underground\nGrown inside a rocky womb\nThe Earth is our cradle\nThe mountain shall become our tomb\nFace us on the battlefield\nYou will meet your doom\nWe do not fear what lies beneath\nWe can never dig too deep\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, diggy diggy coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, digging a coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, diggy diggy coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, digging a coal\nBorn underground\nSuckled from a teat of stone\nRaised in the dark\nThe safety of our mountain home\nSkin made of iron\nSteel in our bones\nTo dig and dig makes us free\nCome on, brothers, sing with me!\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, diggy diggy coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, digging a coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, diggy diggy coal\nI am a snaiwatzer, and I'm digging a coal\nDiggy diggy coal, digging a coal."
  snaiwatz.1.a: "The Coal... is MINE!"
+ snaiwatz.2.t: "Elender Coup"
+ snaiwatz.2.desc: "REPLACE_ME"
+ snaiwatz.2.a: "Glory to the Confederation!"
+ snaiwatz.3.t: "Confederation of the Wretched"
+ snaiwatz.3.desc: "REPLACE_ME"
+ snaiwatz.3.a: "Stop these traitors at once!"
+ snaiwatz.3.b: "Glory to the Kriegskapitän! (Play as Elender Confederation)"
+ 
+ expansion_of_adrianburg_privilege: "Expansion of Adrianburg Privilege"
+ expansion_of_adrianburg_privilege_desc: "REPLACE_ME"
+ snaiwatzer_monarchy: "Snaiwatzer Monarchy"
+ snaiwatzer_monarchy_desc: "REPLACE_ME"
+ snaiwatzer_princedom: "Snaiwatzer Princedom"
+ snaiwatzer_princedom_desc: "REPLACE_ME"
+ mechanic_exempt_from_saelian_empire_taxes_yes: "Is Exempted from all negative tax modifiers in Saelian Empire."
+ TD_Snaiwatzer_SE_Tax_Exemption_1: "Saelian Empire Tax Exemption"
+ TD_Snaiwatzer_SE_Tax_Exemption_2: "Saelian Empire Tax Exemption"
+ 
+ ability_snaiwatzer_army_loyalty_mechanic: "Army Loyalty"
+ army_loyalty_power: "Army Loyalty"
+ army_loyalty_power_desc: "Defines how close are private armies of Snaiwatz to rebelling against feudal order of the empire.\n§YIncreased by:§!\n -Being at War \n -Having High Stability \n -During Age of Innovations\n§YDecreased by:§!\n -Being at peace.\n -High War Exhaustion \n -Low Stability\n"
+ monthly_army_loyalty_power: "Monthly Army Loyalty"
+ army_loyalty_power_gain_modifier: "Army Loyalty Gain Modifier"
+ TD_Golden_Age_Of_Mercenaries: "Golden Age of Snaiwatzer Mercenaries"
+ 
+ reformed_kriegskapitanate: "Reformed Kriegskapitänate"
+ reformed_kriegskapitanate_desc: "REPLACE_ME"
+ ability_snaiwatzer_army_militarization_mechanic: "Army Militarization"
+ snaiwatzer_army_militarization: "Army Militarization"
+ snaiwatzer_army_militarization_desc: "Defines how Militarized are the Snaiwatzer Reformed Armies."
+ monthly_snaiwatzer_army_militarization: "Monthly Army Militarization"
+ snaiwatzer_army_militarization_gain_modifier: "Army Militarization Gain Modifier"
+ promote_snaiwatzer_army_militarization: "Promote Army Militarization"
+ promote_snaiwatzer_army_militarization_desc: "Increase the Army Militarization for a small price."
+ 
+ TD_Rise_of_Elenders: "Rise of the Elender Confederation"
+ confederation_of_the_wretched_reform: "Confederation of The Wretched"
+ confederation_of_the_wretched_reform_desc: "REPLACE_ME"
