--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -284,6 +284,8 @@
  FLD_ADJ: "Felder"
  SNA: "Snaiwatz"
  SNA_ADJ: "Snaiwatzer"
+ ELC: "Elender Confederation"
+ ELC_ADJ: "Elender"
  AUS: "Oustria"
  AUS_ADJ: "Oustrian"
 
